Add part of logic to services